
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int AF_LOCAL ;
 int EXIT_FAILURE ;
 int SOCK_DGRAM ;
 int close (int) ;
 int exit (int ) ;
 int perror (char*) ;
 int socket_sendmmsg (int,char*) ;
 int socketpair (int ,int ,int ,int*) ;

void sendmmsg_kmalloc_kfree(int port, char *buffer) {
 int sock[2];

 int rv = socketpair(AF_LOCAL, SOCK_DGRAM, 0, sock);
 if (rv != 0) {
  perror("socketpair()");
  exit(EXIT_FAILURE);
 }

 socket_sendmmsg(sock[0], buffer);

 close(sock[0]);
}
